--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["dotenv", "justpic", "tarantaika"]
+  "cSpell.words": ["dotenv", "justpic", "libwww", "Scrapy", "tarantaika"]
 }
