--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@fastify/cookie": "^11.0.2",
     "@fastify/helmet": "^13.0.1",
     "@fastify/multipart": "^9.0.3",
+    "@fastify/session": "^11.1.0",
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.1",
@@ -34,10 +36,12 @@
     "cache-manager": "^6.4.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "connect-redis": "^8.0.2",
     "fastify": "^5.2.1",
-    "fastify-cookie": "^5.6.1",
+    "ioredis": "^5.6.0",
     "prisma": "^6.5.0",
     "reflect-metadata": "^0.2.2",
+    "resend": "^4.2.0",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
