--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "target": "ES2023",
+    "types": ["./src/types/fastify-session.d.ts"],
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
